--- a/image-search-mcp-server/src/main/resources/application-sse.yml
+++ b/image-search-mcp-server/src/main/resources/application-sse.yml
@@ -1,10 +1,9 @@
 spring:
-  application:
-    name: image-search-mcp-server
   ai:
-  mcp:
-    server:
-      name: yu-image-search-mcp-server
-      version: 0.0.1
-      type: SYNC
-      stdio: false
+    mcp:
+      server:
+        name: image-search-mcp-server
+        version: 0.0.1
+        type: SYNC
+        # sse
+        stdio: false
