--- a/image-search-mcp-server/src/main/resources/application-stdio.yml
+++ b/image-search-mcp-server/src/main/resources/application-stdio.yml
@@ -1,13 +1,12 @@
 spring:
-  application:
-    name: image-search-mcp-server
   ai:
-  mcp:
-    server:
-      name: yu-image-search-mcp-server
-      version: 0.0.1
-      type: SYNC
-      stdio: true
+    mcp:
+      server:
+        name: image-search-mcp-server
+        version: 0.0.1
+        type: SYNC
+        # stdio
+        stdio: true
   # stdio
   main:
     web-application-type: none
