--- a/pom.xml
+++ b/pom.xml
@@ -140,11 +140,14 @@
 <!--            <version>1.0.0-M7</version>-->
 <!--        </dependency>-->
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.ai</groupId>
             <artifactId>spring-ai-mcp-client-spring-boot-starter</artifactId>
             <version>1.0.0-M6</version>
         </dependency>
-
     </dependencies>
     <repositories>
         <repository>
