--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,16 +4,17 @@ spring:
   profiles:
     active: local
   ai:
+    mcp:
+      client:
+        stdio:
+          servers-configuration: classpath:mcp-servers.json
     vectorstore:
       pgvector:
       index-type: HNSW
       distance-type: COSINE_DISTANCE
       dimensions: 1536
       max-document-batch-size: 10000 # Optional: Maximum number of documents per batch
-    mcp:
-      client:
-        stdio:
-          server-configuration: classpath:mcp-servers.json
+
 server:
   port: 8123
   servlet:
